--- a/index1.html
+++ b/index1.html
@@ -1,14 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <!-- Mapbox CDN -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>My First Web Page</title>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.18.1/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.18.1/mapbox-gl.css" rel="stylesheet">
-    <link rel="stylesheeet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="my map" class="map-container"></div>
+    <!-- Sets container for map -->
+    <div id="my-map" class="map-container"></div>
     <script src="script.js"></script>
 </body>
+
+</html>
